# GriffinX-Your-Local-AI-Assistant

./: .gitignore  GriffinX.md  README.md  SAMPLE_PROMPTS.md  Trixie.md  build.py  build.spec  config.json  download_models.py  final_changes.md  guide.md  improvement_plan.md  install.py  main.py  package.py  project_analysis.md  pyproject.toml  release_notes_v1.md
core/: __init__.py  audio.py  context.py  db.py  executor.py  llm_engine.py  macro_manager.py  model_manager.py  settings.py  startup_manager.py  system_monitor.py  tts_engine.py
ui/: __init__.py  app.py  dashboard.py  theme.py
ui/widgets/: __init__.py  gauge_widget.py  model_card.py  stat_card.py
