[project]
name = "trixie"
version = "1.0.0"
description = "Trixie: Your Local AI Assistant"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper",
    "huggingface-hub",
    "llama-cpp-python",
    "PySide6>=6.6",
    "mss",
    "Pillow",
    "pyautogui",
    "keyboard",
    "sounddevice",
    "numpy",
    "scipy",
    "piper-tts",
    "onnxruntime",
    "psutil",
    "platformdirs",
    "pynvml",
]

[project.optional-dependencies]
build = ["pyinstaller"]

[dependency-groups]
dev = []
